data/derived/comb/progs/unify/prog0046.ml.out
Characters 66-68:
  else bs;;
       ^^
Error: This expression has type 'a but an expression was expected of type
         'a * bool
       The type variable 'a occurs inside 'a * bool
